--- a/views/css/style.styl
+++ b/views/css/style.styl
@@ -3,13 +3,14 @@ body, .graph, .nodes
 	overflow hidden
 
 .nodes, svg.edges
-	absolute top left
+	position absolute
+	top 0
+	left 0
 
 .graph
 	fixed top left
 	width:100%;
 	height:100%;
-	background-color #055C4C
 .nodes
 	width:100%;
 	height:100%;
@@ -23,7 +24,7 @@ path
 	&.sel
 		stroke: blue
 		stroke-width: 5
-.component
+.component, .inline-component
 	font-size 1em
 	position absolute
 	min-width 80px
@@ -34,7 +35,7 @@ path
 	z-index: 2
 	.title
 		text-align: center
-		background-color #999
+		background-color #ddd
 		height: 1.5em
 		border-top-left-radius 0.1em
 		border-top-right-radius 0.1em
@@ -47,4 +48,4 @@ path
 		height: 0.5em
 		width: 0.5em
 		background-color #aaa
-		border-radius 0.1em
+		border-radius 0.1em	
