--- a/public/reports/style.styl
+++ b/public/reports/style.styl
@@ -1,3 +1,5 @@
+@import 'nib'
+
 body
     background-color #eee
     color #111
@@ -54,16 +56,6 @@ body
 td.top
     vertical-align top
 
-/*.changeList
-    ul
-        -moz-columns: 30em;
-        -moz-column-gap: 20px;
-        -webkit-columns: 30em;
-        -webkit-column-gap: 20px;
-        columns: 30em;
-        column-gap: 20px;
-        list-style: disc inside none;
-*/
 .inline-component
     display: inline-block
     position: relative
