--- a/views/css/style.styl
+++ b/views/css/style.styl
@@ -1,19 +1,39 @@
+@import 'nib'
+
 body, .graph, .nodes
 	margin 0
 	overflow hidden
 
-.nodes, svg.edges
-	position absolute
-	top 0
-	left 0
+.nodes, div[graph-model] svg
+	absolute top 0 left 10%
+	width 90%
+	height 100%
+	transform-origin: 0 0
 
 .graph
 	fixed top left
 	width:100%;
 	height:100%;
-.nodes
-	width:100%;
-	height:100%;
+
+div[sidebar]
+	overflow auto
+	display inline-block
+	absolute top left bottom
+	width: 10%
+	transition: all 0.3s linear;
+	background-color: #555
+	ul
+		list-style none
+		margin 0
+		padding 0
+	li
+		background-color: #999
+		padding 10px
+		&:hover
+			background-color: #aaa
+
+	z-index: 5
+
 svg.edges
 	z-index: 1
 
@@ -45,7 +65,10 @@ path
 		float right
 	.box
 		display inline-block
-		height: 0.5em
-		width: 0.5em
+		margin-top 0.2em
+		height: 0.7em
+		width: 1em
 		background-color #aaa
 		border-radius 0.1em	
+		&:hover
+			background-color blue
