--- a/public/reports/style.styl
+++ b/public/reports/style.styl
@@ -20,6 +20,9 @@ body
     .failed
         background-color: #AC4739
         color #eee
+    code
+        color: inherit
+        background: none
 
 
     .command td
