--- a/views/css/style.styl
+++ b/views/css/style.styl
@@ -9,6 +9,9 @@ body, .graph, .nodes
 	width 90%
 	height 100%
 	transform-origin: 0 0
+div[graph-model] svg
+	background-color: #ccc
+
 
 .graph
 	fixed top left
@@ -21,16 +24,7 @@ div[sidebar]
 	absolute top left bottom
 	width: 10%
 	transition: all 0.3s linear;
-	background-color: #555
-	ul
-		list-style none
-		margin 0
-		padding 0
-	li
-		background-color: #999
-		padding 10px
-		&:hover
-			background-color: #aaa
+	background-color: #ddd
 
 	z-index: 5
 
@@ -72,3 +66,8 @@ path
 		border-radius 0.1em	
 		&:hover
 			background-color blue
+	label
+		font-weight: normal
+		margin: 0
+	input[type="checkbox"]
+		margin: 0
