--- a/public/reports/css/style.css
+++ b/public/reports/css/style.css
@@ -3,6 +3,8 @@ body,.graph,.nodes{margin:0;overflow:hidden}
 div[graph-model] svg{background-color:#ccc}
 .graph{position:fixed;top:0;left:0;width:100%;height:100%}
 div[sidebar]{overflow:auto;display:inline-block;position:absolute;top:0;left:0;bottom:0;width:10%;-webkit-transition:all 0.3s linear;-moz-transition:all 0.3s linear;-o-transition:all 0.3s linear;-ms-transition:all 0.3s linear;transition:all 0.3s linear;background-color:#ddd;z-index:5}
+.popup{position:absolute;z-index:10;left:10%;}
+.popup a{padding-top:0;padding-bottom:0}
 svg.edges{z-index:1}
 path{fill:none;stroke:#aaa;stroke-width:5;}
 path.sel{stroke:#00f;stroke-width:5}
