--- a/views/css/style.styl
+++ b/views/css/style.styl
@@ -2,17 +2,46 @@
 
 body, .graph, .nodes
 	margin 0
-	overflow hidden
+div[graph-model]
+	overflow hidden 
+	> svg, > .workspace, > .background 
+		font-size 12px
+		absolute top 50px left 0
+		width 100%
+		height 100%
+		transform-origin: 0 0
+	> .workspace >.nodes
+		font-size 12px
+		absolute top left
+		width 100%
+		height 100%
+		transform-origin: 0 0
+		//transform translate3d(0,0,0)
+	> .background
+		background-color: #ccc
+	> .workspace, > svg
+		overflow hidden		
+	> .navbar
+		absolute top left right
+		height: 50px
+		.glyphicon
+			border solid 1px #333
+			margin 5px
+			padding 2px
+			font-size: 34px
 
-.nodes, div[graph-model] svg
-	absolute top 0 left 10%
-	width 90%
-	height 100%
-	transform-origin: 0 0
-	//transform translate3d(0,0,0)
-div[graph-model] svg
-	background-color: #ccc
+.input-group>.input-group-addon.glyphicon
+	top 0
 
+.popup
+	absolute top 50px left 0
+	z-index 10 
+	white-space nowrap
+	> .dropdown-menu.well
+		padding 1px
+	a
+		padding-top 0
+		padding-bottom 0
 
 .graph
 	fixed top left
@@ -29,13 +58,6 @@ div[sidebar]
 
 	z-index: 5
 
-.popup
-	position absolute
-	z-index 10
-	left 10%
-	a
-		padding-top 0
-		padding-bottom 0
 
 
 svg.edges
@@ -63,6 +85,9 @@ path
 		height: 1.5em
 		border-top-left-radius 0.1em
 		border-top-right-radius 0.1em
+		.close-button
+			float right
+			text-decoration none
 	.input
 		float left
 	.output
