--- a/views/css/style.styl
+++ b/views/css/style.styl
@@ -32,11 +32,17 @@ div[graph-model]
 	.navbar
 		absolute top left right
 		height: 50px
-		.glyphicon
-			border solid 1px #333
-			margin 5px
-			padding 2px
-			font-size: 34px
+	.user-icon
+		border solid 1px #333
+		margin 5px
+		padding 2px
+		font-size: 34px
+
+.filename
+	text-align: center
+	font-family: Monospace
+	font-size: 1.2em
+	font-weight: bold
 
 .tips
 	z-index 20
