more tests, structure improvements

--- a/public/reports/weeklyReport5.jade
+++ b/public/reports/weeklyReport5.jade
@@ -6,7 +6,7 @@ html
     link(rel="stylesheet",href="css/dropdowns.css")
     link(rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css")
     link(rel="stylesheet",href="css/ui-layout.css")
-    link(rel="stylesheet",href="css5/style.css")
+    link(rel="stylesheet",href="css/style.css")
 
   body(ng-app="report",style="margin:2em" ng-init="isDemo = true")
     .center
@@ -206,17 +206,12 @@ html
   script(src="js/pointerevents.min.js")
   script(src="js5/parser.js")
   script(src="js5/reportApp.js")
-  script(type="text/ng-template" id="myModalContent.html")
-    include MacroCreationModal.jade
-  script(type="text/ng-template" id="MacroEditModal.html")
-    include MacroEditModal.jade
-  script(type="text/ng-template" id="sidebarModel.html")
-    include sidebar.jade
-  script(type="text/ng-template" id="graphTemplate.html")
-    include graph.jade
-  script(type="text/ng-template" id="typeaheadTemplate.html")
-    a
-        span(bind-html-unsafe="match.label | typeaheadHighlight:query")
-        span.badge. 14
+  script(type="text/ng-template" id="myModalContent.html"): include MacroCreationModal.jade
+  script(type="text/ng-template" id="MacroEditModal.html"): include MacroEditModal.jade
+  script(type="text/ng-template" id="sidebarModel.html"): include sidebar.jade
+  script(type="text/ng-template" id="graphTemplate.html"): include graph.jade
+  script(type="text/ng-template" id="typeaheadTemplate.html"): a
+    span(bind-html-unsafe="match.label | typeaheadHighlight:query")
+    span.badge. 14
 
 
