--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,35 +1,1 @@
-@media print{*{-webkit-print-color-adjust:exact}
-}html,body,div[graph-model]{width:100%;height:100%;margin:0;padding:0}
-body,.graph,.nodes{margin:0}
-div[graph-model]{overflow:hidden;}
-div[graph-model] .layout,div[graph-model] .tips{position:absolute;top:50px;left:0;width:100%;height:calc(100% - 50px)}
-div[graph-model] svg,div[graph-model] .workspace,div[graph-model] .background,div[graph-model] .workspace > .nodes{font-size:12px;position:absolute;top:0;left:0;width:100%;height:100%;-webkit-transform-origin:0 0;-moz-transform-origin:0 0;-o-transform-origin:0 0;-ms-transform-origin:0 0;transform-origin:0 0}
-div[graph-model] .workspace,div[graph-model] svg{overflow:hidden}
-div[graph-model] .navbar{position:absolute;top:0;left:0;right:0;height:50px;}
-div[graph-model] .navbar .glyphicon{border:solid 1px #333;margin:5px;padding:2px;font-size:34px}
-.tips{z-index:20;background-color:#eee;color:#000}
-.ui-splitbar,.background{background-color:#ccc;position:relative;width:100%;height:100%}
-.shell{overflow:auto;margin-top:8px;background-color:#333;color:#fff;font-family:Monospace;-webkit-transition:height linear 0.1s;-moz-transition:height linear 0.1s;-o-transition:height linear 0.1s;-ms-transition:height linear 0.1s;transition:height linear 0.1s;}
-.shell.ng-hide{display:block !important;height:0}
-.shell .call{font-weight:bold}
-.shell .error{color:#f99}
-.input-group>.input-group-addon.glyphicon{top:0}
-.popup{position:absolute;top:50px;left:0;z-index:10;white-space:nowrap;}
-.popup > .dropdown-menu.well{padding:1px}
-.popup a{padding-top:0;padding-bottom:0}
-.graph{position:fixed;top:0;left:0;width:100%;height:100%}
-div[sidebar]{overflow:auto;display:inline-block;position:absolute;top:0;left:0;bottom:0;width:10%;-webkit-transition:all 0.3s linear;-moz-transition:all 0.3s linear;-o-transition:all 0.3s linear;-ms-transition:all 0.3s linear;transition:all 0.3s linear;background-color:#ddd;z-index:5}
-path{fill:none;stroke:#aaa;stroke-width:3;}
-path.sel{stroke:#00f;stroke-width:5}
-path.back{stroke-width:5;stroke:#777}
-.component,.inline-component{font-size:1em;position:absolute;min-width:80px;min-height:80px;background-color:#fff;-webkit-border-radius:.3em;border-radius:.3em;border:.2em solid #aaa;}
-.component .input-group-addon,.inline-component .input-group-addon,.component .input-group-btn,.inline-component .input-group-btn,.component .input-group-btn>.btn,.inline-component .input-group-btn>.btn{height:initial;-webkit-border-radius:1px;border-radius:1px;width:initial}
-.component .form-control,.inline-component .form-control{-webkit-border-radius:1px;border-radius:1px;float:initial;width:initial}
-.component .title,.inline-component .title{text-align:center;background-color:#ddd;height:1.5em;border-top-left-radius:.1em;border-top-right-radius:.1em;}
-.component .title .close-button,.inline-component .title .close-button{float:right;font-size:1.1em;text-decoration:none}
-.component .input,.inline-component .input{float:left}
-.component .output,.inline-component .output{float:right}
-.component .box,.inline-component .box{display:inline-block;margin-top:.2em;height:.7em;width:1em;background-color:#aaa;-webkit-border-radius:.1em;border-radius:.1em;}
-.component .box:hover,.inline-component .box:hover{background-color:#00f}
-.component label,.inline-component label{font-weight:normal;margin:0}
-.component input[type="number"],.inline-component input[type="number"]{width:7em}
+@media print{*{-webkit-print-color-adjust:exact}}html,body,div[graph-model]{width:100%;height:100%;margin:0;padding:0}.popupArea{overflow:auto}body,.graph,.nodes{margin:0}div[graph-model]{overflow:hidden;}div[graph-model] .layout,div[graph-model] .tips{position:absolute;top:50px;left:0;width:100%;height:calc(100% - 50px)}div[graph-model] svg,div[graph-model] .workspace,div[graph-model] .background,div[graph-model] .workspace > .nodes,div[graph-model] .popupArea{font-size:12px;position:absolute;top:0;left:0;width:100%;height:100%;-webkit-transform-origin:0 0;-moz-transform-origin:0 0;-o-transform-origin:0 0;-ms-transform-origin:0 0;transform-origin:0 0}div[graph-model] .workspace,div[graph-model] svg{overflow:hidden}div[graph-model] .navbar{position:absolute;top:0;left:0;right:0;height:50px}div[graph-model] .user-icon{border:solid 1px #333;margin:5px;padding:2px;font-size:34px}.filename{text-align:center;font-family:Monospace;font-size:1.2em;font-weight:bold}.tips{z-index:20;background-color:#eee;color:#000}.ui-splitbar{z-index:8}.background{background-color:#ccc;position:relative;width:100%;height:100%}.shell{z-index:auto;overflow:auto;margin-top:8px;background-color:#333;color:#fff;font-family:Monospace;-webkit-transition:height linear 0.1s;-moz-transition:height linear 0.1s;-o-transition:height linear 0.1s;-ms-transition:height linear 0.1s;transition:height linear 0.1s;}.shell.ng-hide{display:block !important;height:0}.shell .call{font-weight:bold}.shell .error{color:#f99}.input-group>.input-group-addon.glyphicon{top:0}.popup,.selectpopup{position:absolute;top:50px;left:0;z-index:10;white-space:nowrap}.popup > .dropdown-menu.well{padding:1px}.popup a{padding-top:0;padding-bottom:0}.graph{position:fixed;top:0;left:0;width:100%;height:100%}div[sidebar]{overflow:auto;display:inline-block;position:absolute;top:0;left:0;bottom:0;width:10%;-webkit-transition:all 0.3s linear;-moz-transition:all 0.3s linear;-o-transition:all 0.3s linear;-ms-transition:all 0.3s linear;transition:all 0.3s linear;background-color:#ddd}path{fill:none;stroke:#aaa;stroke-width:3;}path.sel{stroke:#00f;stroke-width:5}path.back{stroke-width:5;stroke:#777}.input-group-addon{color:#000}.component,.inline-component{font-size:1em;position:absolute;min-width:80px;min-height:80px;background-color:#fff;-webkit-border-radius:.3em;border-radius:.3em;border:.2em solid #aaa;z-index:auto;}.component .input-group-addon,.inline-component .input-group-addon,.component .input-group-btn>.btn,.inline-component .input-group-btn>.btn,.component .form-control,.inline-component .form-control{height:24px;padding:2px 10px;-webkit-border-radius:0;border-radius:0}.component .input-group-addon,.inline-component .input-group-addon{border:initial;background-color:initial;padding-left:2px}.component .input-group-addon,.inline-component .input-group-addon,.component .input-group-btn,.inline-component .input-group-btn{width:initial}.component .form-control,.inline-component .form-control{float:initial;width:initial}.component .title,.inline-component .title{text-align:center;background-color:#ddd;height:1.5em;border-top-left-radius:.1em;border-top-right-radius:.1em;}.component .title .close-button,.inline-component .title .close-button{float:right;font-size:1.1em;text-decoration:none}.component .input,.inline-component .input{float:left}.component .output,.inline-component .output{float:right}.component .box,.inline-component .box{display:inline-block;margin-top:.2em;height:.7em;width:1em;background-color:#aaa;-webkit-border-radius:.1em;border-radius:.1em;}.component .box:hover,.inline-component .box:hover{background-color:#00f}.component label,.inline-component label{font-weight:normal;margin:0}.component input[type="number"],.inline-component input[type="number"]{width:7em}
