--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -22,12 +22,11 @@
     <script src="/linker/js/dependencies/ui-bootstrap-tpls.min.js"></script>
     <script src="/js/ui-layout.min.js"></script>
   
-  <!-- <script src="/js/parser.js"></script> -->
   <script src="/js/app.js"></script>
-  <script src="/js/directives/graph"></script>
-  <script src="/js/directives/component"></script>
-  <script src="/js/directives/connector"></script>
-  <script src="/js/directives/port"></script>
+  <script src="/js/directives/graph.js"></script>
+  <script src="/js/directives/component.js"></script>
+  <script src="/js/directives/connector.js"></script>
+  <script src="/js/directives/port.js"></script>
   
   <script type="text/ng-template" id="myModalContent.html">
     <div class="modal-header">
