improve **realism** a bit on the dummy data of the bootstrap, improve UI of the server, quick fix of an issue found

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -27,8 +27,10 @@
 // @import 'pages/signup.less';
 //
 // etc.
-
+@border-radius-base:        1px;
 @import 'bootstrap/bootstrap.less';
+@import 'lib/ui-layout.less';
+@import 'graph.less';
 
 .form-signin{
   width: 30%;
