--- a/assets/styles/bootstrap/print.less
+++ b/assets/styles/bootstrap/print.less
@@ -4,11 +4,16 @@
 // Source: https://github.com/h5bp/html5-boilerplate/blob/master/css/main.css
 
 @media print {
+  
+  paper-print * {
+    color: #000 !important; // Black prints faster: h5bp.com/s
+    background: transparent !important;
+  }
 
   * {
     text-shadow: none !important;
-    color: #000 !important; // Black prints faster: h5bp.com/s
-    background: transparent !important;
+    //color: #000 !important; // Black prints faster: h5bp.com/s
+    //background: transparent !important;
     box-shadow: none !important;
   }
 
