--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Demo Week 5 - Omar Castro</title>
+    <title><%= project.name %></title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/styles/importer.css">
     
