--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -10,10 +10,10 @@
     <table class="table">
     <% _.each(projects, function(project){ %>
     <tr data-id="<%= user.id %>" data-model="user">
-      <td><b><%= project.name %></b></td>
+      <td><%= project.name %></td>
       <td><a href="/project/show/<%= project.id %>" class="btn btn-sm btn-primary">Info</a></td>
       <% if(session.user && session.user.id == user.id){ %>
-      <td><a href="/project/play/<%= project.id %>" class="btn btn-sm btn-primary">Join</a></td>
+      <td><a href="/project/play/<%= project.id %>" class="btn btn-sm btn-primary join-btn">Join</a></td>
       <% } %>
 
       <!-- <td><a href="/user/destroy/<%= user.id %>" class="btn btn-sm btn-danger">Delete</a></td> -->
